# GadgetSystemFramework

./: .gitignore  README.md  build.cmd  build.ps1  make-gsf.bat  make.bat  pre-build.bat  run.bat  run_gsf.py
ArtSrc/: gsf-logo-long.psd  icon-install.psd  icon-uninstall.psd  icon.psd
Scripts/: readme.txt  service-debug.bat  service-install.bat  service-remove.bat  service-start.bat
gadgets/clock/: gadget.json  main.py
gsf_core/: gadget_base.py  main_manager.py
gsf_framework/: build-gsf-setup.bat  build.spec  setup.cfg  setup.iss
gsf_framework/gsf/: control_center.py  control_center_logic.py  control_center_runner.py  main_manager.py  service.py
