[metadata]
name = gsf-framework
version = 0.1.0
author = Xiaoguang Yin
author_email = your.email@example.com
description = A framework for creating Windows desktop gadgets in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cookgreen/GadgetSystemFramework
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    PySide6 >= 6.4.0

[options.entry_points]
console_scripts =
    gsf-manager = gsf.main_manager:main

[options.packages.find]
where = .

[options.package_data]
gsf = assets/*.png